add website files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,38 @@
+<!DOCTYPE html>
 <html>
-  <body>
-  	 Hello DBC!
-  <body>
-<html>  
+	<head>
+		<title>
+			Devesh Patel
+		</title>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" type="text/css" href="stylesheets/default.css" />
+	</head>
+	<body>
+		<header>
+			
+				<h1>Devesh Patel</h1>
+
+			
+		</header>
+			<nav>
+			<div class="menu">
+				<a href=#>Contact</a>
+				<a href=#>Projects</a>
+				<a href="blog/index.html">Blog</a>
+				<a href=#>About</a>
+				<a href="index.html">Home</a>
+			</div>	
+			</nav>
+		
+  	 <img src="images/Devesh.jpg" alt="photo" />
+  	 <footer>
+  	 <nav id="social">
+		<a href=#>Twitter</a>
+		<a href=#>Facebook</a>
+		<a href=#>LinkedIn</a>
+		<a href=#>GitHub</a>
+	</nav>
+	</footer>	
+	</body>
+
+</html>  
