--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 			</div>	
 			</nav>
 		
-  	 <img src="images/Devesh.jpg" alt="photo" />
+  	 <img id="photo" src="images/Devesh.jpg" alt="photo" />
   	 <footer>
   	 <nav id="social">
-		<a href=#>Twitter</a>
-		<a href=#>Facebook</a>
-		<a href=#>LinkedIn</a>
-		<a href=#>GitHub</a>
+		<a href="https://twitter.com/devexley"><img src="images/twitter.png" /></a>
+		<a href="https://www.facebook.com/devesh.patel.1654" target="_blank"><img src="images/Facebook_icon.png" /></a>
+		<a href="https://www.linkedin.com/pub/devesh-patel/13/937/921" target="_blank"><img src="images/linkedin-icon.png" /></a>
+		<a href="https://github.com/devexley" target="_blank"><img src="images/github.gif" /></a>
 	</nav>
 	</footer>	
 	</body>
