--- a/index.html
+++ b/index.html
@@ -6,33 +6,34 @@
 		</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="stylesheets/default.css" />
+		<link href='http://fonts.googleapis.com/css?family=Lobster|Shadows+Into+Light' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
+		<div id="wrapper">
 		<header>
 			
 				<h1>Devesh Patel</h1>
 
 			
 		</header>
-			<nav>
-			<div class="menu">
-				<a href=#>Contact</a>
-				<a href=#>Projects</a>
-				<a href="blog/index.html">Blog</a>
-				<a href=#>About</a>
-				<a href="index.html">Home</a>
-			</div>	
+
+		<div id="photo">	
+  	 		<img src="images/p-platypus_m.jpg" alt="photo" />
+  	 	</div>
+			<nav class="menu">
+			
+				<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href=#>About</a></li>
+				<li><a href="contact.html">Contact</a></li>
+				<li><a href=#>Projects</a></li>
+				<li><a href="blog/index.html">Blog</a></li>
+				</ul>
+				
 			</nav>
-		
-  	 <img id="photo" src="images/Devesh.jpg" alt="photo" />
   	 <footer>
-  	 <nav id="social">
-		<a href="https://twitter.com/devexley"><img src="images/twitter.png" /></a>
-		<a href="https://www.facebook.com/devesh.patel.1654" target="_blank"><img src="images/Facebook_icon.png" /></a>
-		<a href="https://www.linkedin.com/pub/devesh-patel/13/937/921" target="_blank"><img src="images/linkedin-icon.png" /></a>
-		<a href="https://github.com/devexley" target="_blank"><img src="images/github.gif" /></a>
-	</nav>
-	</footer>	
+	</footer>
+	</div>	
 	</body>
 
 </html>  
