--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 			Devesh Patel
 		</title>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="stylesheets/default.css" />
 		<link href='http://fonts.googleapis.com/css?family=Lobster|Shadows+Into+Light' rel='stylesheet' type='text/css'>
 	</head>
@@ -16,10 +17,11 @@
 
 			
 		</header>
-
-		<div id="photo">	
+		<div>
+		<section id="photo">	
   	 		<img src="images/p-platypus_m.jpg" alt="photo" />
-  	 	</div>
+  	 	</section>
+  	 	<section>
 			<nav class="menu">
 			
 				<ul>
@@ -31,7 +33,10 @@
 				</ul>
 				
 			</nav>
+		</section>	
+		<div>
   	 <footer>
+  	 	<p> &copy; 2015 Devesh Patel </p>
 	</footer>
 	</div>	
 	</body>
