--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 			
 		</header>
 		<div>
-		<section id="photo">	
-  	 		<img src="images/p-platypus_m.jpg" alt="photo" />
-  	 	</section>
+ 	
+  	 		<img id="photo"src="images/p-platypus_m.jpg" alt="photo" />
   	 	<section>
 			<nav class="menu">
 			
