--- a/about.html
+++ b/about.html
@@ -18,8 +18,6 @@
 			
 		</header>
 		<div>
- 	
-  	 		<img id="photo"src="images/p-platypus_m.jpg" alt="photo" />
   	 	<section>
 			<nav class="menu">
 			
@@ -34,6 +32,15 @@
 			</nav>
 		</section>	
 		</div>
+		<section class="blog-header">
+			<h1> About Me </h1>
+		</section>
+		<section class="blog">
+			<p>I am from Glendale Heights, a suburb of Chicago, IL.</p>
+			<p>I am currently participating in DevBootCamp to learn and hone my skills as a full stack web developer.</p>
+			<p>I am interested in reading on various subjects and enjoy fine arts films.</p>
+
+		</section>
   	 <footer>
   	 	<p> &copy; 2015 Devesh Patel </p>
 	</footer>
