--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 				<li><a href="contact.html">Contact</a></li>
 				<li><a href=#>Projects</a></li>
 				<li><a href="blog/index.html">Blog</a></li>
+				<li><a href="resume.html">Resume</a></li>
 				</ul>
 				
 			</nav>
