--- a/resume.html
+++ b/resume.html
@@ -7,12 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/default.css" />
 	<link href='http://fonts.googleapis.com/css?family=Lobster|Shadows+Into+Light' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body class="resume">
 
 	<h3>Devesh Patel</h3>
 	<h3>1119 Kingston Court</h3>
 	<h3>Glendale Heights IL 60139</h3>
-		<p>I bring a unique blend of skills, adept with both technical and business requirements.  I am a dedicated IT technologist, who is counted on in addressing complex and difficult problems. 
+		<p>I have a unique blend of skills adept with both technical and business requirements.  I am a dedicated IT technologist, who is counted on in addressing complex and difficult problems. 
 		</p>
 		<p>I’m a result-oriented person with proven success in application development and support.  I, also, have a diversified global experience with strong abilities demonstrated in systems and data integration.
 		</p>
@@ -31,6 +31,43 @@
 	<h5>Microsoft Access and Excel</h5>
 		<p>➢	Rewrote and created several methods to enhance current Access and Excel applications increasing productivity by 40% and reduced issues involved with maintenance by 95%.  These involved accounting, sales, and other access db’s written by others and through trouble shooting and redesign made them robust enough so that they went from breaking down monthly to not having issues for over 3 years.
 		</p>
+	<h4>PROFESSIONAL EXPERIENCE</h4>
+	<h5>Chain-sys, Grand Ledge MI (May 2011 - Feb 2012)</h5>
+	<h5>Solutions Architect - Middleware Consulting Practice</h5>
+		<ul>
+			<li>Architecture design and project management of a complex supply chain and forecasting integration project for a European Division of a Fortune 500 company utilizing custom ETL middleware product.</li>
+			<li>Addressed complex and high-risk architectural design issues with business leads and systems analysts.</li>
+				<ul>
+					<li>Translated business logic requirements to Oracle PL/SQL for batch processes.</li>
+					<li>Optimized interfaces between Oracle EBS and vendor tools for supply chain planning and forecasting.</li>
+				</ul>
+			<li>Provided governance, escalation management, and root cause analysis to eliminate technical issues.</li>
+			<li>Administered support requests throughout multi-phase implementation schedule.</li>
+			
+		</ul>
+
+<h5>Quad Graphics (formally World Color) - Bensenville, IL (October 2005 – May 2011)</h5>
+	<h5>Software Developer/Systems Analyst (2006 - 2011)</h5>
+	<p>Served as a Systems Analyst overseeing the application development and support for ETL and data reporting. Involved in core aspects of Information Systems Development Life Cycle in both Agile and Waterfall methods.</p>
+		<ul>
+			<li>Supported production environment providing bug fixes as necessary while maintaining high availability.</li>
+			<li>Analyzed data integrity for in-house software solving key issues and provided support for third-party software with an emphasis on understanding the issue prior to communicating with vendor to provide a quick and efficient solution.</li>
+			<li>Knowledgeable in core aspects of Information Systems Development Life Cycle.</li>
+			<li>Maintained unsupported legacy software and provided stop gap solutions for IT development and tool resources.</li>
+			<li>	Developed and supported applications for operational use in key areas including internal tracking, customer reporting and cost streamlining.</li>
+		</ul>
+	<h5>Supply Chain Strategist (2005 – 2006)</h5>
+	<p>Maintained supply chain and middleware applications while providing day-to-day operational support.</p>
+		<ul>
+			<li>Responsible for reviewing, analyzing, and creating technical specifications for application enhancements.</li>
+			<li>Supported ERP applications and provided subject matter expertise for improving logistical operations efficiencies.</li>
+			<li>Conducted QA testing for internal Truck Management System and created test procedures and scenarios.</li>
+			<li>Maintained unsupported legacy software and provided stop gap solutions for IT development and tool resources.</li>
+			<li>Identified emerging technologies and best practices that benefited operational cost.</li>
+		</ul>
+	<h4>Education:</h4>
+		<p>San Diego State University (1994-1996) - Studies in Comparative Literature (Degree Incomplete)</p>
+		<p>Loyola University Chicago (1988-1992) - B.A. English</p>
 
 </body>
 </html>
