--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 				<li><a href=#>Projects</a></li>
 				<li><a href="blog/index.html">Blog</a></li>
 				<li><a href="resume.html">Resume</a></li>
+				<li><a href="cheat-sheet.html">Git Commands</a></li>
 				</ul>
 				
 			</nav>
