--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
 			
 		</header>
-		<div>
- 	
-  	 		<img id="photo"src="images/p-platypus_m.jpg" alt="photo" />
+
   	 	<section>
 			<nav class="menu">
 			
@@ -35,7 +33,10 @@
 				
 			</nav>
 		</section>	
-		</div>
+ 		<figure>
+  	 		<img id="photo"src="images/p-platypus_m.jpg" alt="photo" />
+  	 	</figure>
+
   	 <footer>
   	 	<p> &copy; 2015 Devesh Patel </p>
 	</footer>
