--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="contact.html">Contact</a></li>
-				<li><a href=#>Projects</a></li>
+				<li><a href="projects/index.html">Projects</a></li>
 				<li><a href="blog/index.html">Blog</a></li>
 				</ul>
 				
