--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="contact.html">Contact</a></li>
-				<li><a href=#>Projects</a></li>
+				<li><a href="projects/index.html">Projects</a></li>
 				<li><a href="blog/index.html">Blog</a></li>
-				<li><a href="resume.html">Resume</a></li>
-				<li><a href="cheat-sheet.html">Git Commands</a></li>
+				<li><a href="resume.html" target="_blank">Resume</a></li>
 				</ul>
 				
 			</nav>
