--- a/projects/cheat-sheet.html
+++ b/projects/cheat-sheet.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Cheat Sheet</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="stylesheets/cheat_sheet.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/cheat_sheet.css">
 </head>
 <body>
      <h1>git Commands Are FUN</h1>
